feat: testing some changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       <img class="logo-symbol" src="./assets/img/logo.svg" alt="Simbolo" />
       <img class="logo-folio" src="./assets/img/folio..svg" alt="Folio" />
     </figure>
-    <img class="burguer-menu" src="./assets/img/burger icon.png" alt="Menu Burguer" />
+    <div class="burguer-menu">
+      <span class="bn"></span>
+      <span class="bn"></span>
+    </div>
     <nav class="menu-header">
       <ul>
         <li><a href="about">About</a></li>
@@ -55,14 +58,14 @@
       </div>
     </section>
 
-    <section id="abt" class="about">
+    <section id="abt" class="about ">
       <div class="container">
         <div class="content">
           <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
           <h6 class="small-title">01.</h6>
           <h6 class="small-title">Who We Are</h6>
         </div>
-        <h2>
+        <h2 class="mobile-title">
           We Make <br />
           Designs that <br />
           Lead and <br />
@@ -102,69 +105,65 @@
       </div>
     </section>
 
-    <section class="third-section">
-      <div class="container">
-        <div class="content">
-          <img class="logo-update second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
-          <h6 style="color: #5468e7" class="small-title">02.</h6>
-          <h6 style="color: #5468e7" class="small-title">Who We Are</h6>
-        </div>
-        <div class="text-arrows">
-          <h2 style="color: #232340">
-            We Make Designs that <br> Lead and Inpire.
-          </h2>
-
-          <figure class="arrows">
-            <img class="arrow-left" src="./assets/img/arrow-down-left.png" alt="" />
-            <img class="arrow-right" src="./assets/img/arrow-down-right.png" alt="" />
-          </figure>
-        </div>
-        <div class="services">
-          <div class="items">
-            <div class="inside-items">
-              <img src="./assets/img/Graph.svg" alt="Graph" />
-            </div>
-            <h8 class="text-service">Strategy</h8>
-          </div>
-          <div class="items">
-            <figure class="inside-items" style="background-color: #908cff">
-              <img src="./assets/img/Image_Flower.png" alt="Flower" />
-            </figure>
-            <h8 class="text-service">Branding</h8>
-          </div>
-          <div class="items">
-            <figure class="inside-items" style="background-color: #ffc0a5">
-              <img src="./assets/img/volume.png" alt="Volume" />
-            </figure>
-            <h8 class="text-service">Interative</h8>
-          </div>
-          <div class="items">
-            <figure class="inside-items" style="background-color: #ffadd0">
-              <img style="padding-left: 10px" src="./assets/img/SpeachBubble V2.png" alt="Bubble" />
-            </figure>
-            <h8 class="text-service">Communicate</h8>
-          </div>
-        </div>
+    <section class="third-section container">
+      <div class="content">
+        <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
+        <h6 style="color: #5468e7" class="small-title">02.</h6>
+        <h6 style="color: #5468e7" class="small-title">Who We Are</h6>
       </div>
+      <div class="text-arrows">
+        <h2 class=" content-title" style="color: #232340">
+          We Make Designs that Lead and Inpire.
+        </h2>
+
+        <figure class="arrows">
+          <img class="arrow-left" src="./assets/img/arrow-down-left.png" alt="" />
+          <img class="arrow-right" src="./assets/img/arrow-down-right.png" alt="" />
+        </figure>
+      </div>
+      <ul class="services">
+        <li class="items">
+          <figure class="inside-items">
+            <img src="./assets/img/Graph.svg" alt="Graph" />
+          </figure>
+          <h8 class="text-service">Strategy</h8>
+        </li>
+        <li class="items">
+          <figure class="inside-items" style="background-color: #908cff">
+            <img src="./assets/img/Image_Flower.png" alt="Flower" />
+          </figure>
+          <h8 class="text-service">Branding</h8>
+        </li>
+        <li class="items">
+          <figure class="inside-items" style="background-color: #ffc0a5">
+            <img src="./assets/img/volume.png" alt="Volume" />
+          </figure>
+          <h8 class="text-service">Interative</h8>
+        </li>
+        <li class="items">
+          <figure class="inside-items" style="background-color: #ffadd0">
+            <img style="padding-left: 10px" src="./assets/img/SpeachBubble V2.png" alt="Bubble" />
+          </figure>
+          <h8 class="text-service">Communicate</h8>
+        </li>
+      </ul>
     </section>
 
-    <section>
-      <div class="container">
-        <div class="content">
-          <img class="logo-update second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
-          <h6 style="color: #5468e7" class="small-title">03.</h6>
-          <h6 style="color: #5468e7" class="small-title">Who We Are</h6>
-        </div>
-        <h2 style="color: #232340">
-          Our <br />
-          Partnerships.
-        </h2>
-        <p class="paragraph">
-          Agency is a full-service agency, busy <br />
-          designing and building beautiful digital products, brands,
-          experiences.
-        </p>
+    <section class="container">
+      <div class="content">
+        <img class="logo-update second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
+        <h6 style="color: #5468e7" class="small-title">03.</h6>
+        <h6 style="color: #5468e7" class="small-title">Who We Are</h6>
       </div>
+      <h2 class="mobile-title" style="color: #232340">
+        Our <br />
+        Partnerships.
+      </h2>
+      <p class="paragraph">
+        Agency is a full-service agency, busy <br />
+        designing and building beautiful digital products, brands,
+        experiences.
+      </p>
     </section>
 
     <section class="third-section">
@@ -174,7 +173,7 @@
           <h6 style="color: #5468e7" class="small-title">04.</h6>
           <h6 style="color: #5468e7" class="small-title">Who We Are</h6>
         </div>
-        <h2 style="color: #232340">Jobs</h2>
+        <h2 class="mobile-title" style="color: #232340">Jobs</h2>
         <p class="paragraph">
           Agency is a full-service agency, busy <br />
           designing and building beautiful digital products, brands,
@@ -231,7 +230,7 @@
               A design team building a curated marketplace for UI designers.
               </h5>
             <div style="margin-top: 82px;">
-              <h2 style="text-align: center;">Let’s talk about your next project</h2>
+              <h2 class="mobile-title" style="text-align: center;">Let’s talk about your next project</h2>
               <button class="btn-footer">Contact Us</button>
 
             </div>
