feat: testing some changes

--- a/index.html
+++ b/index.html
@@ -106,20 +106,22 @@
     </section>
 
     <section class="third-section container">
-      <div class="content">
-        <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
-        <h6 style="color: #5468e7" class="small-title">02.</h6>
-        <h6 style="color: #5468e7" class="small-title">Who We Are</h6>
-      </div>
-      <div class="text-arrows">
-        <h2 class=" content-title" style="color: #232340">
-          We Make Designs that Lead and Inpire.
-        </h2>
-
-        <figure class="arrows">
-          <img class="arrow-left" src="./assets/img/arrow-down-left.png" alt="" />
-          <img class="arrow-right" src="./assets/img/arrow-down-right.png" alt="" />
+      <div class="box-content">
+        <figure class="fit-logo">
+          <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
         </figure>
+        <div class="content">
+          <h6 style="color: #5468e7" class="small-title">02. Who We Are</h6>
+          <h2 class=" content-title" style="color: #232340">
+            We Make Designs that Lead and Inpire.
+          </h2>
+        </div>
+        <div class="text-arrows">
+          <figure class="arrows">
+            <img class="arrow-left" src="./assets/img/arrow-down-left.png" alt="" />
+            <img class="arrow-right" src="./assets/img/arrow-down-right.png" alt="" />
+          </figure>
+        </div>
       </div>
       <ul class="services">
         <li class="items">
