feat: testing some changes

--- a/index.html
+++ b/index.html
@@ -60,30 +60,31 @@
 
     <section id="abt" class="about ">
       <div class="container">
-        <div class="content">
-          <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
-          <h6 class="small-title">01.</h6>
-          <h6 class="small-title">Who We Are</h6>
-        </div>
-        <h2 class="mobile-title">
-          We Make <br />
-          Designs that <br />
-          Lead and <br />
-          Inpire.
-        </h2>
-        <div class="about-container">
-          <figure class="arrows">
-            <img class="arrow-left" src="./assets/img/left-normal.png" alt="" />
-            <img class="arrow-right" src="./assets/img/arrow-down.svg" alt="" />
+        <div class="box-content">
+          <figure class="fit-logo">
+            <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
           </figure>
-          <div class="years">
-            <p class="number-year">2020</p>
-            <img src="./assets/img/Path (Stroke).svg" alt="" />
+          <div class="content">
+            <h6 style="color: white;" class="small-title">02. Who We Are</h6>
+            <h2 class=" content-title" style="color:white">
+              We Make Designs that Lead and Inpire.
+            </h2>
+          </div>
+          <div class="text-arrows">
+            <figure class="arrows">
+              <img class="arrow-left" src="./assets/img/left-normal.png" alt="" />
+              <img class="arrow-right" src="./assets/img/arrow-down-white.png" alt="" />
+            </figure>
           </div>
         </div>
-        <figure>
-          <img class="img-desktop" src="./assets/img/desktop.png" alt="Desktop" />
-        </figure>
+        <div class="years">
+          <p class="number-year">2020</p>
+          <img src="./assets/img/Path (Stroke).svg" alt="" />
+        </div>
+      </div>
+      <figure>
+        <img class="img-desktop" src="./assets/img/desktop.png" alt="Desktop" />
+      </figure>
       </div>
       <div class="hero-container">
         <div class="text-hero">
@@ -168,92 +169,100 @@
       </p>
     </section>
 
-    <section class="third-section">
-      <div class="container">
-        <div class="content">
-          <img class="logo-update second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
-          <h6 style="color: #5468e7" class="small-title">04.</h6>
-          <h6 style="color: #5468e7" class="small-title">Who We Are</h6>
+    <section class="third-section container">
+      <div class="job-content">
+        <figure class="job-logo-space">
+          <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
+        </figure>
+        <div class="content job-space">
+          <h6 style="color: #5468e7" class="small-title">04. Who We Are</h6>
+          <h1 class="content-title jobs-title" style="color: #232340">
+            Jobs
+          </h1>
+          <p class="paragraph">
+            Agency is a full-service agency, busy
+            designing and building beautiful digital products, brands,
+            experiences.
+          </p>
+          <div class="job-available">
+            <img src="./assets/img/Style 1.png" alt="">
+            <h4 class="text-available">Available jobs</h4>
+          </div>
         </div>
-        <h2 class="mobile-title" style="color: #232340">Jobs</h2>
-        <p class="paragraph">
-          Agency is a full-service agency, busy <br />
-          designing and building beautiful digital products, brands,
-          experiences.
-        </p>
+        <div>
+          <ul class="job-options">
+            <li class="job-cards">
+              <div class="job-notification">
+                <h6>Graphic Designer</h6>
+                <figure class="job-logo">
+                  <img style="padding-top: 5px" src="./assets/img/notification.png" alt="Nofication" />
+                </figure>
+              </div>
+              <p class="job-text">2 years experience</p>
+              <figure>
+                <img src="./assets/img/arrow-down-right.png" alt="" />
+              </figure>
+            </li>
+            <li class="job-cards">
+              <h6>Visual Designer</h6>
+              <p class="job-text">2 years experience</p>
+              <figure>
+                <img src="./assets/img/arrow-down-right.png" alt="" />
+              </figure>
+            </li>
+            <li class="job-cards">
+              <h6 class="tree-title">Art Director</h6>
+              <p class="job-text">2 years experience</p>
+              <figure>
+                <img src="./assets/img/arrow-down-right.png" alt="" />
+              </figure>
+            </li>
+            <li class="job-cards">
+              <div class="job-notification">
+                <h6>Web Designer</h6>
+                <figure>
+                  <img style="padding-top: 5px" src="./assets/img/notification-6.png" alt="Nofication" />
+                </figure>
+              </div>
+              <p class="job-text">2 years experience</p>
+              <figure>
+                <img src="./assets/img/arrow-down-right.png" alt="" />
+              </figure>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="options">
-        <div class="job-cards">
-          <div class="job-notification">
-            <h6>Graphic Designer</h6>
-            <figure>
-              <img style="padding-top: 5px" src="./assets/img/notification.png" alt="Nofication" />
-            </figure>
-          </div>
-          <p class="job-text">2 years experience</p>
-          <figure>
-            <img src="./assets/img/arrow-down-right.png" alt="" />
-          </figure>
-        </div>
-        <div class="job-cards">
-          <h6>Visual Designer</h6>
-          <p class="job-text">2 years experience</p>
-          <figure>
-            <img src="./assets/img/arrow-down-right.png" alt="" />
-          </figure>
-        </div>
-        <div class="job-cards">
-          <h6 class="tree-title">Art Director</h6>
-          <p class="job-text">2 years experience</p>
-          <figure>
-            <img src="./assets/img/arrow-down-right.png" alt="" />
-          </figure>
-        </div>
-        <div class="job-cards">
-          <div class="job-notification">
-            <h6>Web Designer</h6>
-            <figure>
-              <img style="padding-top: 5px" src="./assets/img/notification-6.png" alt="Nofication" />
-            </figure>
-          </div>
-          <p class="job-text">2 years experience</p>
-          <figure>
-            <img src="./assets/img/arrow-down-right.png" alt="" />
-          </figure>
-        </div>
-      </div>
-
-      <footer>
-        <div class="container">
-          <div class="test">
-            <figure><img class="bubble-green" src="./assets/img/SpeachBubble Green.png" alt=""></figure>
-            <p style="color: white ;" s class="small-title">👋 Say hello</p>
-            <p style="color: white; margin-top: 40px;" class="text-branding">
-              A design team building a curated marketplace for UI designers.
-              </h5>
-            <div style="margin-top: 82px;">
-              <h2 class="mobile-title" style="text-align: center;">Let’s talk about your next project</h2>
-              <button class="btn-footer">Contact Us</button>
-
-            </div>
-          </div>
-          <figure class="logo-footer">
-            <img class="footer-symbol" src="./assets/img/logo.svg" alt="Simbolo" />
-            <img class="footer-folio " src="./assets/img/folio..svg" alt="Folio" />
-          </figure>
-          <p class="paragraph" style="text-align: center;">Agency is a full-service agency, busy designing and
-            building.</p>
-          <button>Home <img src="" alt=""></button>
-          <div>
-            <figure>
-              <img src="./assets/img/logo-facebook.png" alt="Facebook">
-              <img src="./assets/img/logo-youtube.png" alt="Youtube">
-              <img src="./assets/img/logo-instagram.png" alt="Instagram">
-            </figure>
-            <p>© 2020, UI8 LLC.</p>
-          </div>
-      </footer>
     </section>
+    <footer>
+      <div class="container">
+        <div class="test">
+          <figure><img class="bubble-green" src="./assets/img/SpeachBubble Green.png" alt=""></figure>
+          <p style="color: white ;" s class="small-title">👋 Say hello</p>
+          <p style="color: white; margin-top: 40px;" class="text-branding">
+            A design team building a curated marketplace for UI designers.
+            </h5>
+          <div style="margin-top: 82px;">
+            <h2 class="mobile-title" style="text-align: center;">Let’s talk about your next project</h2>
+            <button class="btn-footer">Contact Us</button>
+
+          </div>
+        </div>
+        <figure class="logo-footer">
+          <img class="footer-symbol" src="./assets/img/logo.svg" alt="Simbolo" />
+          <img class="footer-folio " src="./assets/img/folio..svg" alt="Folio" />
+        </figure>
+        <p class="paragraph" style="text-align: center;">Agency is a full-service agency, busy designing and
+          building.</p>
+        <button>Home <img src="" alt=""></button>
+        <div>
+          <figure>
+            <img src="./assets/img/logo-facebook.png" alt="Facebook">
+            <img src="./assets/img/logo-youtube.png" alt="Youtube">
+            <img src="./assets/img/logo-instagram.png" alt="Instagram">
+          </figure>
+          <p>© 2020, UI8 LLC.</p>
+        </div>
+    </footer>
   </main>
 </body>
 
