changes in section about, jobs and services

--- a/index.html
+++ b/index.html
@@ -58,43 +58,62 @@
       </div>
     </section>
 
-    <section id="abt" class="about ">
-      <div class="container">
-        <div class="box-content">
-          <figure class="fit-logo">
-            <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
-          </figure>
-          <div class="content">
-            <h6 style="color: white;" class="small-title">02. Who We Are</h6>
-            <h2 class=" content-title" style="color:white">
-              We Make Designs that Lead and Inpire.
-            </h2>
-          </div>
-          <div class="text-arrows">
+    <section id="abt" class="about  container">
+      <div class="box-content">
+        <figure class="fit-logo">
+          <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
+        </figure>
+        <div class="content">
+          <h6 style="color: white;" class="small-title">02. Who We Are</h6>
+          <h2 class=" content-title" style="color:white">
+            We Make Designs that Lead and Inpire.
+          </h2>
+        </div>
+        <div class="arrows-years">
+          <div>
             <figure class="arrows">
               <img class="arrow-left" src="./assets/img/left-normal.png" alt="" />
               <img class="arrow-right" src="./assets/img/arrow-down-white.png" alt="" />
             </figure>
           </div>
-        </div>
-        <div class="years">
-          <p class="number-year">2020</p>
-          <img src="./assets/img/Path (Stroke).svg" alt="" />
+          <div class="years">
+            <p class="number-year">2020</p>
+            <img src="./assets/img/Path (Stroke).svg" alt="" />
+          </div>
         </div>
       </div>
-      <figure>
-        <img class="img-desktop" src="./assets/img/desktop.png" alt="Desktop" />
-      </figure>
+      <div class="years-img">
+        <ul class="yrs">
+          <li>
+            <p>2017</p>
+          </li>
+          <li>
+            <p>2018</p>
+          </li>
+          <li>
+            <p>2019</p>
+          </li>
+          <li>
+            <p>2020</p>
+          </li>
+          <li>
+            <p>2021</p>
+          </li>
+        </ul>
+        <figure class="img-desktop">
+          <img class="img-desktop" src="./assets/img/desktop.png" alt="Desktop" />
+        </figure>
       </div>
-      <div class="hero-container">
+      </div>
+      <div class="about-container ">
         <div class="text-hero">
-          <h6 style="color: white">
+          <h5 class="about-text">
             A design team building a curated marketplace for UI designers.
-          </h6>
+          </h5>
           <p class="paragraph">
-            4,404 curated design resources to energize <br />
-            your creative workflow. We're a growing family <br />
-            of 334,531 designers and makers from around <br />
+            4,404 curated design resources to energize
+            your creative workflow. We're a growing family
+            of 334,531 designers and makers from around
             the world
           </p>
           <button class="button-work">Contact Us</button>
@@ -103,7 +122,6 @@
           <p class="number-about">28</p>
           <p class="text-branding" style="color: white">Bigest Branding</p>
         </div>
-      </div>
     </section>
 
     <section class="third-section container">
@@ -117,7 +135,7 @@
             We Make Designs that Lead and Inpire.
           </h2>
         </div>
-        <div class="text-arrows">
+        <div>
           <figure class="arrows">
             <img class="arrow-left" src="./assets/img/arrow-down-left.png" alt="" />
             <img class="arrow-right" src="./assets/img/arrow-down-right.png" alt="" />
