changes in section about, jobs and services

--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
             Jobs
           </h1>
           <p class="paragraph">
-            Agency is a full-service agency, busy
-            designing and building beautiful digital products, brands,
+            Agency is a full-service agency, busy designing and building beautiful digital products, brands, and
             experiences.
           </p>
           <div class="job-available">
