changes in footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./assets/css/who.css">
   <link rel="stylesheet" href="./assets/css/service.css">
   <link rel="stylesheet" href="./assets/css/jobs.css">
-
+  <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 
 <body>
@@ -72,8 +72,12 @@
         <div class="arrows-years">
           <div>
             <figure class="arrows">
-              <img class="arrow-left" src="./assets/img/left-normal.png" alt="" />
-              <img class="arrow-right" src="./assets/img/arrow-down-white.png" alt="" />
+              <figure class="fit-arrow">
+                <img class="arrow-left" src="./assets/img/left-normal.png" alt="Arrow left" />
+              </figure>
+              <figure class="fit-arrow">
+                <img class="arrow-right" src="./assets/img/arrow-down-white.png" alt="Arrow right" />
+              </figure>
             </figure>
           </div>
           <div class="years">
@@ -137,8 +141,12 @@
         </div>
         <div>
           <figure class="arrows">
-            <img class="arrow-left" src="./assets/img/arrow-down-left.png" alt="" />
-            <img class="arrow-right" src="./assets/img/arrow-down-right.png" alt="" />
+            <figure class="fit-arrow">
+              <img class="arrow-left" src="./assets/img/arrow-down-left.png" alt="" />
+            </figure>
+            <figure class="fit-arrow">
+              <img class="arrow-right" src="./assets/img/arrow-down-right.png" alt="" />
+            </figure>
           </figure>
         </div>
       </div>
@@ -250,36 +258,78 @@
         </div>
       </div>
     </section>
-    <footer>
-      <div class="container">
-        <div class="test">
-          <figure><img class="bubble-green" src="./assets/img/SpeachBubble Green.png" alt=""></figure>
-          <p style="color: white ;" s class="small-title">👋 Say hello</p>
-          <p style="color: white; margin-top: 40px;" class="text-branding">
-            A design team building a curated marketplace for UI designers.
-            </h5>
-          <div style="margin-top: 82px;">
-            <h2 class="mobile-title" style="text-align: center;">Let’s talk about your next project</h2>
-            <button class="btn-footer">Contact Us</button>
+    <section>
 
+      <footer>
+        <div class="footer-container">
+          <div class="footer-box">
+            <Figure class="footer-logo">
+              <img style="background: #C897E4;;" class="second-logo" src="./assets/img/logo.svg" alt=" Simbolo">
+            </Figure>
+            <figure><img class="bubble-green" src="./assets/img/SpeachBubble Green.png" alt=""></figure>
+            <p style="color: white ;" s class="small-title">👋 Say hello</p>
+            <h5 style="color: white; margin-top: 40px;" class="text-branding">
+              A design team building a curated marketplace for UI designers.
+            </h5>
+            <div style="margin-top: 82px;" class=" footer-box-bottom">
+              <div>
+                <h2 class="footer-text">Let’s talk about your next project</h2>
+                <button class="footer-contact">Contact Us</button>
+              </div>
+
+              <div class="footer-second-box">
+                <figure><img style="padding-right: 250px;" src="./assets/img/SpeachBubble Green.png" alt=""></figure>
+                <div class="test">
+                  <h5 class="footer-text-right">Invest in your designs <br> today!</h5>
+                  <figure><img src="./assets/img/Stroke.png" alt=""></figure>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <figure class="logo-footer">
-          <img class="footer-symbol" src="./assets/img/logo.svg" alt="Simbolo" />
-          <img class="footer-folio " src="./assets/img/folio..svg" alt="Folio" />
-        </figure>
-        <p class="paragraph" style="text-align: center;">Agency is a full-service agency, busy designing and
-          building.</p>
-        <button>Home <img src="" alt=""></button>
-        <div>
-          <figure>
-            <img src="./assets/img/logo-facebook.png" alt="Facebook">
-            <img src="./assets/img/logo-youtube.png" alt="Youtube">
-            <img src="./assets/img/logo-instagram.png" alt="Instagram">
+          <figure class="logo-footer">
+            <img class="footer-symbol" src="./assets/img/logo.svg" alt="Simbolo" />
+            <img class="footer-folio " src="./assets/img/folio..svg" alt="Folio" />
           </figure>
+          <p class="paragraph  paragraph-mobile" style="text-align: center;">Agency is a full-service agency, busy
+            designing and
+            building</p>
+          <p class="footer-paragraph">Agency is a full-service agency, busy designing and building
+            beautiful digital
+            products, brands, and
+            experiences.</p>
+          <nav class="menu-footer">
+            <ul>
+              <li><a href="about">About</a></li>
+              <li><a href="">Work</a></li>
+              <li><a href="">Services</a></li>
+              <li><a href="jobs">Jobs</a></li>
+            </ul>
+          </nav>
+          <button class="btn-footer">Home <img src="./assets/img/Path.png" alt=""></button>
+          <hr class="footer-line">
+        </div>
+        <div class="footer-bottom">
+          <ul class="links-footer">
+            <p class="footer-follow ">Follow us</p>
+            <li>
+              <figure>
+                <img src="./assets/img/logo-facebook.png" alt="Facebook">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="./assets/img/logo-youtube.png" alt="Youtube">
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="./assets/img/logo-instagram.png" alt="Instagram">
+              </figure>
+            </li>
+          </ul>
           <p>© 2020, UI8 LLC.</p>
         </div>
-    </footer>
+      </footer>
   </main>
 </body>
 
