changes in footer

--- a/index.html
+++ b/index.html
@@ -278,7 +278,9 @@
               </div>
 
               <div class="footer-second-box">
-                <figure><img style="padding-right: 250px;" src="./assets/img/SpeachBubble Green.png" alt=""></figure>
+                <figure>
+                  <img src="./assets/img/SpeachBubble Green.png" alt="">
+                </figure>
                 <div class="test">
                   <h5 class="footer-text-right">Invest in your designs <br> today!</h5>
                   <figure><img src="./assets/img/Stroke.png" alt=""></figure>
