changes in footer

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 <figure>
                   <img src="./assets/img/SpeachBubble Green.png" alt="">
                 </figure>
-                <div class="test">
+                <div class="footer-arrow">
                   <h5 class="footer-text-right">Invest in your designs <br> today!</h5>
                   <figure><img src="./assets/img/Stroke.png" alt=""></figure>
                 </div>
