changes in footer

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./assets/css/service.css">
   <link rel="stylesheet" href="./assets/css/jobs.css">
   <link rel="stylesheet" href="./assets/css/footer.css">
+  <link rel="stylesheet" href="./assets/css/work.css">
 </head>
 
 <body>
@@ -179,20 +180,158 @@
     </section>
 
     <section class="container">
-      <div class="content">
-        <img class="logo-update second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
-        <h6 style="color: #5468e7" class="small-title">03.</h6>
-        <h6 style="color: #5468e7" class="small-title">Who We Are</h6>
+      <div class="box-content">
+        <figure class="fit-logo">
+          <img class="second-logo" src="./assets/img/logo.svg" alt="Simbolo" />
+        </figure>
+        <div class="content">
+          <h6 style="color: #5468e7" class="small-title">03. Famous Projects</h6>
+          <h2 class="title-work">
+            Our Partnerships
+          </h2>
+          <p class="paragraph" style="margin-bottom: 56px;">
+            Agency is a full-service agency, busy designing and building beautiful digital products, brands, and
+            experiences.
+          </p>
+        </div>
+        <div class="space-btn">
+          <button class="btn-work">Contact Us</button>
+        </div>
       </div>
-      <h2 class="mobile-title" style="color: #232340">
-        Our <br />
-        Partnerships.
-      </h2>
-      <p class="paragraph">
-        Agency is a full-service agency, busy <br />
-        designing and building beautiful digital products, brands,
-        experiences.
-      </p>
+
+      <div class="work-subject">
+        <div class="image-female">
+          <div class="work-box">
+            <button class="btn-featured">Featured Product</button>
+            <h4 class="title-subject">Sapiens: The Free <br> Character Builder App.</h4>
+            <p class="paragraph-subject">Beautiful library of modular, component-based character illustrations free to
+              use
+              for all your personal or client projects.</p>
+
+          </div>
+          <img src="./assets/img/img (2).png" alt="">
+
+          <div class="baixo-esquerda">
+            <button class="btn-view">
+              View
+            </button>
+          </div>
+          <div class="mid-right">
+            <figure class="fit-arrow">
+              <img class="" src="./assets/img/right-hover.png" alt="Arrow right" />
+            </figure>
+          </div>
+        </div>
+      </div>
+      <div class="all-container">
+        <div class="right-column">
+          <div class="right-top">
+            <h4 class="work-title">Bento Vol. 2</h4>
+            <div class="work-container-web">
+              <img class="img-main" src="./assets/img/[ 4 ] – Main.png" alt="Main">
+              <img class="img-stroke" src="./assets/img/Stroke-Black.png" alt="Arrow">
+            </div>
+            <p class="paragraph" style="margin-bottom: 415px; margin-top: 20px;">Agency is a full-service agency, busy
+              designing <br> and
+              building beautiful digital
+              products, brands, <br>
+              and
+              experiences.</p>
+          </div>
+          <div class="right-bottom">
+            <h4 class="work-title">Bento Vol. 3</h4>
+            <div class="container-bottom-web">
+              <img class="img-tablet" src="./assets/img/[ 2 ] – Tablet.png" alt="Tablet">
+              <img class="img-stroke" src="./assets/img/Stroke-Black.png" alt="Arrow">
+            </div>
+            <p class="paragraph" style="margin-bottom: 415px; margin-top: 20px;">Agency is a full-service agency, busy
+              designing <br> and
+              building beautiful digital
+              products, brands, <br>
+              and
+              experiences.</p>
+          </div>
+        </div>
+        <div class="left-column">
+          <div class="left-top">
+            <h4 class="work-title">Bento 3D Illustration</h4>
+            <div class="work-container-left">
+              <img class="img-second-tablet" src="./assets/img/Tablet.png" alt="Tablet">
+              <img class="img-stroke" src="./assets/img/Stroke-Black.png" alt="Arrow">
+            </div>
+            <p class="paragraph" style="margin-bottom: 365px; margin-top: 20px;">Agency is a full-service agency, busy
+              designing <br> and
+              building beautiful digital
+              products, brands, <br>
+              and
+              experiences.</p>
+
+          </div>
+          <div class="left-bottom">
+            <h4 class="work-title">Sapiens: Man</h4>
+            <div class="work-container-bottom">
+              <img class="img-male" src="./assets/img/Male Walking Colorful 3@2x.png" alt="Male Colorful">
+              <img class="img-fourth-stroke" src="./assets/img/Stroke-Black.png" alt="">
+            </div>
+            <p class="paragraph" style="margin-bottom: 56px; margin-top: 20px;">Agency is a full-service agency, busy
+              designing <br> and
+              building beautiful digital
+              products, brands, <br>
+              and
+              experiences.</p>
+          </div>
+        </div>
+      </div>
+      <div class=" content-display">
+        <div class="work-container">
+          <figure><img src="./assets/img/Female Running Colorful 22x.png" alt=""></figure>
+          <div class="btn-product">
+            <button class="btn-featured">Featured Product</button>
+          </div>
+        </div>
+        <div class="work-content ">
+          <h6 class="work-title">Bento 3D Illustration</h6>
+          <p class="paragraph">Agency is a full-service agency, busy designing and building beautiful digital products,
+            brands</p>
+          <figure><img src="./assets/img/Stroke-Black.png" alt=""></figure>
+        </div>
+        <div style="background: #C897E4;" class="work-container">
+          <img src="./assets/img/[ 4 ] – Main.png" alt="">
+        </div>
+        <div class="work-content">
+          <h6 class="work-title">Bento 3D Illustration</h6>
+          <p class="paragraph">Agency is a full-service agency, busy designing and building beautiful
+            digital products,
+            brands</p>
+          <figure><img src="./assets/img/Stroke-Black.png" alt=""></figure>
+        </div>
+        <div style="background: #FFCE79;" class="work-container">
+          <img src="./assets/img/Tablet.png" alt="Tablet">
+        </div>
+        <div class="work-content test">
+          <h6 class="work-title">Bento 3D Illustration</h6>
+          <p class="paragraph">Agency is a full-service agency, busy designing and building beautiful digital products,
+            brands</p>
+          <figure><img src="./assets/img/Stroke-Black.png" alt=""></figure>
+        </div>
+        <div style="background: #D1ECFD;" class="work-container"> <img src="./assets/img/[ 2 ] – Tablet.png"
+            alt="Tablet">
+        </div>
+        <div class="work-content">
+          <h6 class="work-title">Bento 3D Illustration</h6>
+          <p class="paragraph">Agency is a full-service agency, busy designing and building beautiful digital products,
+            brands</p>
+          <figure><img src="./assets/img/Stroke-Black.png" alt=""></figure>
+        </div>
+        <div class="work-container"> <img src="./assets/img/Male Walking Colorful 3@2x.png" alt=""></div>
+        <div class="work-content">
+          <h6 class="work-title">Bento 3D Illustration</h6>
+          <p class="paragraph">Agency is a full-service agency, busy designing and building beautiful digital products,
+            brands</p>
+          <figure><img src="./assets/img/Stroke-Black.png" alt=""></figure>
+          <button class="work-contact">Contact Us</button>
+        </div>
+      </div>
     </section>
 
     <section class="third-section container">
